[package]
name = "feeler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.62"
bme280 = "=0.4.4"
embedded-hal = "=1.0.0-alpha.7"
hyper = { version = "0.14", features = ["http1", "server"]}
lazy_static = "1.4.0"
linux-embedded-hal = "=0.4.0-alpha.2"
prometheus = "0.13.0"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"]}
